<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/close_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_close"
                android:layout_gravity="right"/>

            <TextView
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:text="@string/register_dialog"
                android:textColor="@color/black_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <EditText
            android:id="@+id/edit_user"
            android:hint="@string/edit_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:maxLines="1"/>


        <EditText
            android:id="@+id/edit_register_password"
            android:hint="@string/edit_psswrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textPassword"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/edit_rePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/review_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textPassword"
            android:maxLines="1"/>

        <Button
            android:id="@+id/dialog_register_btn"
            android:textColor="@color/white"
            android:background="@color/material_teal_accent_700"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/register_btn"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>